# libmyrpc

./: CMakeLists.txt  README.md  autobuild.sh  confile.conf
example/: friend.pb.cc  friend.pb.h  friend.proto  userlogin.pb.cc  userlogin.pb.h  userlogin.proto
example/callee/: CMakeLists.txt  userserver.cpp
example/callee/log/: logfile-2025-04-02.txt
example/caller/: CMakeLists.txt  userclient.cpp
example/caller/log/: logfile-2025-04-02.txt
lib/include/: pb_include.hpp  rpc_clientchannel.hpp  rpc_controller.hpp  rpc_messagelist.hpp  rpc_serverchannel.hpp  rpc_zookeeper.hpp
src/: CMakeLists.txt  none.cpp
src/include/: rpc_confprase.hpp  rpc_logger.hpp  rpc_servrice.hpp  rpcclient.hpp  rpcserver.hpp
test/protobuffer/: main  main.cpp  test.pb.cc  test.pb.h  test.proto
